# Projeto-Cadeira

./: README.md
Codigos/3Cadeira/: CMakeLists.txt
Codigos/3Cadeira/src/: main.c  main_ulp.txt
Codigos/3Cadeira/ulp/: ulp.txt
Codigos/3CadeiraPrototipo2/: CMakeLists.txt
Codigos/3CadeiraPrototipo2/src/: main.c
Codigos/3Cadeira_Prototipo/: CMakeLists.txt
Codigos/ArduinoESP32/: ESP32_CadeiraV0.ino  ESP32_CadeiraV1.ino  ESP32_CadeiraV2.ino  ESP32_CadeiraV3.ino  ESP32_CadeiraV4.ino
